--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ serde_json = "1"
 specta = "=2.0.0-rc.20"
 specta-typescript = "0.0.7"
 tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
-cocoa = "0.26.0"
 rand = "0.8.5"
+
+[target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2.7"
+cocoa = "0.26.0"
