--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.8",
-    "@tabler/icons-react": "^3.21.0",
+    "@heroui/react": "2.7.6",
     "@tauri-apps/api": "^2.0.3",
     "@tauri-apps/plugin-os": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.1",
