--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   },
   "dependencies": {
     "@heroui/react": "2.7.6",
-    "@tauri-apps/api": "^2.0.3",
-    "@tauri-apps/plugin-os": "^2.0.0",
-    "@tauri-apps/plugin-shell": "^2.0.1",
-    "framer-motion": "^11.11.10",
+    "@tauri-apps/api": "^2.4.1",
+    "@tauri-apps/plugin-os": "^2.2.1",
+    "@tauri-apps/plugin-shell": "^2.2.1",
+    "framer-motion": "^11.18.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.4",
-    "@types/lodash": "^4.17.12",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10"
+    "@tauri-apps/cli": "^2.4.1",
+    "@types/lodash": "^4.17.16",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "vite": "^5.4.18"
   }
 }
